---------------------------------------------------------------------------------------------------
Version: 2.7.0
Date: ????
  Features:
    - Support entity blacklisting through mod-data in the prototype phase (suggested by @LoupAndSnoop in #9)
  Bugfixes:
    - do not allow captive-biter-spawners to be moved (reported by @dragon_gawain on the forum)
---------------------------------------------------------------------------------------------------
Version: 2.6.3
Date: 2025-07-15
  Bugfixes:
    - Fix that some mods that use internal wiring but expose max wire distance of 0 could not be moved.
---------------------------------------------------------------------------------------------------
Version: 2.6.2
Date: 2025-06-23
  Bugfixes:
    - fix crash when player cursor stack is not available (e.g. because the player is dead). Reported by @JigSaW_3 on the forums.
---------------------------------------------------------------------------------------------------
Version: 2.6.1
Date: 2025-06-12
  Changes:
    - Ghosts do not collide with items.
    - Entities "hoover" up items. If the inventory is full, do not move the items around.
    - Add new setting to allow destruction of items on the ground if the inventory is full.
---------------------------------------------------------------------------------------------------
Version: 2.6.0
Date: 2025-06-11
  Changes:
    - Allow moving ghosts, if enabled.
---------------------------------------------------------------------------------------------------
Version: 2.5.4
Date: 2025-03-25
  Bugfixes:
    - Enforce deselection with changing the cursor stack, irrespective whether there is a new entity or not.
---------------------------------------------------------------------------------------------------
Version: 2.5.3
Date: 2025-03-20
  Bugfixes:
    - When rotating an entity and then picking up a blueprint from the blueprint library and rotating it, the entity kept rotating. Reported by @Nightmare_Sky on the forums.