@@ -10,13 +10,14 @@ dolly-rotate-saved-reverse=Reverse rotate saved dolly
 
 [mod-setting-name]
 dolly-save-entity=Save last moved entity
-dolly-clear-entity=Clear last moved entity when selecting another entity.
+dolly-clear-entity=Clear last moved entity when selecting another entity
 dolly-ignore-collisions=Ignore collision boxes
 dolly-allow-ignore-collisions=Allow ignoring collisions
 dolly-debug=Enable debugging
 dolly-ghost-move=Allow moving ghosts
-dolly-item-destroy=Destroy ground items if inventory is full.
+dolly-item-destroy=Destroy ground items if inventory is full
 dolly-transporter-mode=Enable "Transporter" mode
+dolly-remote-move=Allow moving entities in remote view
 
 [mod-setting-description]
 dolly-save-entity=Temporarily saves entities for X seconds so they can be moved without having to keep selecing them. 0 to disable saving.
@@ -27,11 +28,13 @@ dolly-debug=Enable debugging information when moving entities. If you encounter 
 dolly-ghost-move=Allow moving ghost entities around.
 dolly-item-destroy=When entities are moved and items are on the ground, they get "hoovered" up and stored in the inventory. When the inventory is full, instead of refusing to move the entity, destroy the items.
 dolly-transporter-mode=Moves entities that normally can not be moved by creating an identical copy and destroying the original (Which is how the Star Trek Transporter actually works).
+dolly-remote-move=Allow moving entities when the player is not near an entity but looks at it in the remote view.
 
 [picker-dollies]
 cant-be-teleported=__1__ does not support moving.
+cant-remote-move=__1__ can't be moved while remote viewing.
 wires-maxed=The wires can not be stretched any longer.
 no-room=__1__ will not fit.
 wrong-force=__1__ does not belong to your force.
-rocket-present=__1__ can not be moved with rocket present, launch rocket first.
+rocket-present=__1__ can't be moved with rocket present, launch rocket first.
 teleport-problem=EVEN PICKIER DOLLIES PROBLEM! PLEASE REPORT TO THE MOD AUTHOR. COULD NOT RESTORE POSITION OF __1__
