@@ -40,24 +40,31 @@ data:extend {
         order = 'ba',
     },
     {
+        name = "dolly-remote-move",
+        setting_type = 'startup',
+        type = "bool-setting",
+        default_value = false,
+        order = 'ca',
+    },
+    {
         name = "dolly-ghost-move",
         setting_type = 'startup',
         type = "bool-setting",
         default_value = true,
-        order = 'ca',
+        order = 'cb',
     },
     {
         name = "dolly-item-destroy",
         setting_type = 'startup',
         type = "bool-setting",
         default_value = false,
-        order = 'cb',
+        order = 'cc',
     },
     {
         name = "dolly-transporter-mode",
         setting_type = 'startup',
         type = "bool-setting",
         default_value = false,
-        order = 'cc',
+        order = 'cd',
     },
 }
