@@ -3,6 +3,7 @@ Version: 2.7.0
 Date: ????
   Features:
     - Support entity blacklisting through mod-data in the prototype phase (suggested by @LoupAndSnoop in #9)
+    - Do not allow entity moving when remote viewing. The old behavior can be restored with a startup setting (suggested by @UltraJohn on the forum)
   Bugfixes:
     - do not allow captive-biter-spawners to be moved (reported by @dragon_gawain on the forum)
 ---------------------------------------------------------------------------------------------------
